# TranslationAssistantForQt

./: .gitignore  CMakeLists.txt  README.md
aut/: ApplicationUnderTest_ro_RO.ts  CMakeLists.txt  MyQmlType.qml  main.cpp  main.qml  qml.qrc
include/: pendingtranslator.h  qtranslationassistant.h  scene.h  scenehooks.h  textitem.h  textitemhandler.h  textitemoverlay.h  translationassistant.h  translationfiles.h  translationidentifier.h
media/: sample_video.mov
qml/: PendingChangesPage.qml  TranslationAssistant.qml  TranslationDelegate.qml  TranslationListView.qml  TranslationListViewDelegate.qml  TranslationListViewPage.qml  TranslationsForSelectedTextPage.qml  translation_assistant.qrc
src/: pendingtranslator.cpp  qtranslationassistant.cpp  scene.cpp  scenehooks.cpp  textitem.cpp  textitemhandler.cpp  textitemoverlay.cpp  translationassistant.cpp  translationfiles.cpp  translationidentifier.cpp
test/: CMakeLists.txt  PendingTranslatorTest.h  TranslationFilesLoadTest.h  TranslationFilesTest.h  test_main.cpp
test/files/: bad_xml.ts  find_test.ts  simple_file.ts
